--- a/SDL/SDL.vcxproj
+++ b/SDL/SDL.vcxproj
@@ -78,12 +78,12 @@
     <LibraryPath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\lib\x64;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -105,11 +105,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\lib\x64;%(AdditionalLibraryDirectories);C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\lib\x64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -139,13 +139,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\include;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_image-2.0.4\lib\x64;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2-2.0.9\lib\x64;C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\lib\x64;%(AdditionalLibraryDirectories);C:\Users\Adrian\source\repos\SDL\SDLLib\SDL2_ttf-2.0.15\lib\x64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -157,6 +157,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Text.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -172,6 +173,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Text.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Tile.h" />
