--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Libraries
+SDLLib
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
